installing and hooking into a vector library

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "beefy": "^2.1.3",
     "brfs": "^1.4.0",
-    "gl-now": "^1.4.0"
+    "gl-now": "^1.4.0",
+    "victor": "^0.2.6"
   },
   "devDependencies": {},
   "scripts": {
