--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "beefy": "^2.1.3",
     "brfs": "^1.4.0",
     "gl-now": "^1.4.0",
-    "victor": "^0.2.6"
+    "vectors": "^0.1.0"
   },
   "devDependencies": {},
   "scripts": {
